--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   sync-develop:
     name: Sync hotfix to develop
-    if: ${{ github.event.before != '0000000000000000000000000000000000000000' && github.head_ref == 'hotfix' }}
+    if: ${{ github.event.before != '0000000000000000000000000000000000000000' && contains(github.ref, 'hotfix') }}
     runs-on: macos-latest
 
     steps:
@@ -54,4 +54,3 @@ jobs:
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/git/refs/heads/releaseSTG
-
