--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           git config user.email "mashold0802@gmail.com"
 
       - name: Fetch all branches
-        run: git fetch --all
+        run: git fetch --all --prune
 
       - name: Merge changes into develop
         run: |
