--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,27 @@ jobs:
         run: |
           git merge --no-ff origin/${{ github.event.pull_request.head.ref }} -X theirs
           git push origin develop
+ 
+ delete-releaseSTG:
+    name: Delete releaseSTG branch after merge to main
+    if: >-
+      github.event.pull_request.merged == true &&
+      contains(github.event.pull_request.head.ref, 'releaseSTG') &&
+      github.event.pull_request.base.ref == 'main'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure Git
+        run: |
+          git config user.name "edamamenoko"
+          git config user.email "mashold0802@gmail.com"
+
+      - name: Delete releaseSTG branch
+        run: |
+          echo "Deleting the branch: ${{ github.event.pull_request.head.ref }}"
+          git push origin --delete ${{ github.event.pull_request.head.ref }}
